--- a/angular-web-app/src/app/components/_admin/general/general.component.html
+++ b/angular-web-app/src/app/components/_admin/general/general.component.html
@@ -7,7 +7,7 @@
       <form (ngSubmit)="onSubmit()" #generalContentForm="ngForm" *ngIf="content">
         <div class="form-group row">
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
             <mat-label>Form style</mat-label>
             <mat-select id="contactFormContentFormStyle" name="contactFormContentFormStyle"
               [(ngModel)]="content.formStyle" #contactFormContentFormStyleInput="ngModel">
@@ -17,7 +17,7 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
             <mat-label>Form kleur</mat-label>
             <mat-select id="contactFormContentFormColor" name="contactFormContentFormColor"
               [(ngModel)]="content.formColor" #contactFormContentFormColorInput="ngModel">
