--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -6,7 +6,7 @@
         <div class="col-12">
 
             <!-- Table Filter -->
-            <mat-form-field color="accent" class="w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="w-100">
                 <button mat-button matPrefix mat-icon-button>
                     <mat-icon>search</mat-icon>
                 </button>
