--- a/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-cards/comp-contact-cards.component.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="contactCardContentTitle" placeholder="Titel" name="contactCardContentTitle"
               [(ngModel)]="services.title" #contactCardContentTitleInput="ngModel" required>
@@ -49,7 +49,7 @@
               verplicht</mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="contactCardContentSubTitle" placeholder="Subtitel"
               name="contactCardContentSubTitle" [(ngModel)]="services.subTitle" #contactCardContentSubTitleInput="ngModel"
@@ -58,7 +58,7 @@
               verplicht</mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-12">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
             <mat-label>Content text</mat-label>
             <textarea rows="1" matInput type="text" id="contactCardContentText" placeholder="Text"
               name="contactCardContentText" [(ngModel)]="services.text" #contactCardContentTextInput="ngModel"
@@ -70,7 +70,7 @@
 
         <div class="form-group row">
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card titel</mat-label>
               <input matInput type="text" id="contactCard0Title" placeholder="Titel" name="contactCard0Title"
                 [(ngModel)]="services.services[0].title" #contactCard0TitleInput="ngModel" required>
@@ -78,7 +78,7 @@
                 verplicht</mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card icon</mat-label>
               <input matInput type="text" id="contactCard0Icon" placeholder="Icon" name="contactCard0Icon"
                 [(ngModel)]="services.services[0].icon" #contactCard0IconInput="ngModel" required>
@@ -86,7 +86,7 @@
               </mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card tekst</mat-label>
               <input matInput type="text" id="contactCard0Text" placeholder="Text" name="contactCard0Text"
                 [(ngModel)]="services.services[0].description">
@@ -94,7 +94,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card titel</mat-label>
               <input matInput type="text" id="contactCard1Title" placeholder="Titel" name="contactCard1Title"
                 [(ngModel)]="services.services[1].title" #contactCard1TitleInput="ngModel" required>
@@ -102,7 +102,7 @@
                 verplicht</mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card icon</mat-label>
               <input matInput type="text" id="contactCard1Icon" placeholder="Icon" name="contactCard1Icon"
                 [(ngModel)]="services.services[1].icon" #contactCard1IconInput="ngModel" required>
@@ -110,7 +110,7 @@
               </mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card tekst</mat-label>
               <input matInput type="text" id="contactCard1Text" placeholder="Text" name="contactCard1Text"
                 [(ngModel)]="services.services[1].description">
@@ -118,7 +118,7 @@
           </div>
 
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card titel</mat-label>
               <input matInput type="text" id="contactCard2Title" placeholder="Titel" name="contactCard2Title"
                 [(ngModel)]="services.services[2].title" #contactCard2TitleInput="ngModel" required>
@@ -126,7 +126,7 @@
                 verplicht</mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card icon</mat-label>
               <input matInput type="text" id="contactCard2Icon" placeholder="Icon" name="contactCard2Icon"
                 [(ngModel)]="services.services[2].icon" #contactCard2IconInput="ngModel" required>
@@ -134,7 +134,7 @@
               </mat-hint>
             </mat-form-field>
 
-            <mat-form-field appearance="fill" class="form-field w-100">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
               <mat-label>Card tekst</mat-label>
               <input matInput type="text" id="contactCard2Text" placeholder="Text" name="contactCard2Text"
                 [(ngModel)]="services.services[2].description">
