--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="contactFormContentTitle" placeholder="Titel" name="contactFormContentTitle"
               [(ngModel)]="content.title" #contactFormContentTitleInput="ngModel" required>
@@ -55,7 +55,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="contactFormContentSubTitle" placeholder="Subtitel"
               name="contactFormContentSubTitle" [(ngModel)]="content.subTitle"
@@ -65,7 +65,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-12">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
             <mat-label>Content text</mat-label>
             <textarea rows="1" matInput type="text" id="contactFormContentText" placeholder="Text"
               name="contactFormContentText" [(ngModel)]="content.text" #contactFormContentTextInput="ngModel"
@@ -75,7 +75,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Form style</mat-label>
             <mat-select id="contactFormContentFormStyle" name="contactFormContentFormStyle"
               [(ngModel)]="content.formStyle" #contactFormContentFormStyleInput="ngModel" required>
@@ -88,7 +88,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Form kleur</mat-label>
             <mat-select id="contactFormContentFormColor" name="contactFormContentFormColor"
               [(ngModel)]="content.formColor" #contactFormContentFormColorInput="ngModel" required>
