--- a/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-cta/comp-cta.component.html
@@ -39,14 +39,14 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="ctaContentTitle" placeholder="Titel" name="ctaContentTitle"
               [(ngModel)]="cta.title" #ctaContentTitleInput="ngModel" required>
             <mat-hint [hidden]="ctaContentTitleInput.valid || ctaContentTitleInput.pristine">Titel is
               verplicht</mat-hint>
           </mat-form-field>
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="ctaContentSubTitle" placeholder="Subtitel" name="ctaContentSubTitle"
               [(ngModel)]="cta.subTitle" #ctaContentSubTitleInput="ngModel" required>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-12">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
             <mat-label>Achtergrond</mat-label>
             <mat-select id="ctaContentImage" name="ctaContentImage" [(ngModel)]="cta.image">
               <mat-option [value]="backgrounds[0]">
@@ -76,14 +76,14 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-xs-12 col-sm-6">
             <mat-label>Knop label</mat-label>
             <input matInput type="text" id="ctaContentBtnLabel" placeholder="Label" name="ctaContentBtnLabel"
               [(ngModel)]="cta.btnText" #ctaContentBtnLabelInput="ngModel" required>
             <mat-hint [hidden]="ctaContentBtnLabelInput.valid || ctaContentBtnLabelInput.pristine">Label is verplicht
             </mat-hint>
           </mat-form-field>
-          <mat-form-field appearance="fill" class="form-field col-xs-12 col-sm-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-xs-12 col-sm-6">
             <mat-label>Knop link</mat-label>
             <input matInput type="text" id="ctaContentBtnLink" placeholder="Link" name="ctaContentBtnLink"
               [(ngModel)]="cta.btnLink" #ctaContentBtnLinkInput="ngModel" required>
