--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="featuredContentTitle" placeholder="Titel" name="featuredContentTitle"
               [(ngModel)]="featured.title" #featuredContentTitleInput="ngModel" required />
@@ -52,7 +52,7 @@
               verplicht</mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="featuredContentSubTitle" placeholder="Subtitel"
               name="featuredContentSubTitle" [(ngModel)]="featured.subTitle" #featuredContentSubTitleInput="ngModel"
@@ -62,7 +62,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-12">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
             <mat-label>Content text</mat-label>
             <textarea rows="1" matInput type="text" id="featuredContentText" placeholder="Text"
               name="featuredContentText" [(ngModel)]="featured.text" #featuredContentTextInput="ngModel" required>
@@ -71,7 +71,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
             <mat-label>Schilderij</mat-label>
             <mat-select id="featuredContentPainting" name="featuredContentPainting" [(ngModel)]="featured.painting"
               #featuredContentPaintingInput="ngModel" required>
@@ -85,7 +85,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
             <mat-label>Hoogte</mat-label>
             <input matInput type="text" id="featuredContentHeight" placeholder="Hoogte" name="featuredContentHeight"
               [(ngModel)]="featured.maxHeight" #featuredContentHeightInput="ngModel" required />
