--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
               [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
@@ -50,7 +50,7 @@
               verplicht</mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel"
               name="latestNewsContentSubTitle" [(ngModel)]="latestNews.subTitle"
@@ -60,7 +60,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-10">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-10">
             <mat-label>Content text</mat-label>
             <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text"
               name="latestNewsContentText" [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel"
@@ -70,7 +70,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-2">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-2">
             <mat-label>Items</mat-label>
             <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
               [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
