--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group row">
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content titel</mat-label>
             <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
               [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
@@ -49,7 +49,7 @@
               verplicht</mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
             <mat-label>Content subtitel</mat-label>
             <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
               name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
@@ -59,7 +59,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-10">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-10">
             <mat-label>Content text</mat-label>
             <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
               name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
@@ -68,7 +68,7 @@
             </mat-hint>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="form-field col-2">
+          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-2">
             <mat-label>Items</mat-label>
             <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
               [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
