--- a/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
@@ -19,13 +19,13 @@
         <form (ngSubmit)="onSubmit()" #footerForm="ngForm">
           <div class="form-group row">
             <div class="col-sm-12 col-md-6">
-              <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
                 <mat-label>Over titel</mat-label>
                 <input matInput type="text" id="aboutTitle" placeholder="Titel" name="aboutTitle"
                   [(ngModel)]="footerContent.aboutTitle" #aboutTitle="ngModel" required />
                 <mat-hint [hidden]="aboutTitle.valid || aboutTitle.pristine">Titel is verplicht</mat-hint>
               </mat-form-field>
-              <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
                 <mat-label>Over tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.aboutText" name="aboutText" id="aboutText"
                   type="text" #aboutText="ngModel" required>
@@ -34,14 +34,14 @@
               </mat-form-field>
             </div>
             <div class="col-sm-12 col-md-6">
-              <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
                 <mat-label>Social media titel</mat-label>
                 <input matInput type="text" id="socialTitle" placeholder="Titel" name="socialTitle"
                   [(ngModel)]="footerContent.socialTitle" #socialTitle="ngModel" required />
                 <mat-hint [hidden]="socialTitle.valid || socialTitle.pristine">Social media titel is verplicht
                 </mat-hint>
               </mat-form-field>
-              <mat-form-field appearance="fill" class="form-field w-100">
+              <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field w-100">
                 <mat-label>Social media tekst</mat-label>
                 <textarea matInput rows="3" [(ngModel)]="footerContent.socialText" name="socialText" id="socialText"
                   type="text" #socialText="ngModel" required>
@@ -52,7 +52,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
               <mat-label>Facebook link</mat-label>
               <input matInput type="text" id="facebookLink" placeholder="Tekst" name="facebookLink"
                 [(ngModel)]="footerContent.facebookLink" />
@@ -61,7 +61,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
               <mat-label>Instagram link</mat-label>
               <input matInput type="text" id="instaLink" placeholder="Tekst" name="instaLink"
                 [(ngModel)]="footerContent.instagramLink" />
@@ -70,7 +70,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
               <mat-label>Twitter link</mat-label>
               <input matInput type="text" id="twitterLink" placeholder="Tekst" name="twitterLink"
                 [(ngModel)]="footerContent.twitterLink" />
@@ -79,7 +79,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field appearance="fill" class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
               <mat-label>Footer tekst</mat-label>
               <input matInput type="text" id="footerText" placeholder="Tekst" name="footerText"
                 [(ngModel)]="footerContent.footerText" #footerText="ngModel" required />
