--- a/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
@@ -8,7 +8,7 @@
       <div *ngIf="newsItems">
 
         <!-- Table Filter -->
-        <mat-form-field color="accent" class="w-100">
+        <mat-form-field [appearance]="formStyle" [color]="formColor" class="w-100">
           <button mat-button matPrefix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
