--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -58,7 +58,7 @@
               <form (ngSubmit)="onSubmit()" #pnfContentForm="ngForm">
 
                 <div class="form-group row">
-                  <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+                  <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
                     <mat-label>Content titel</mat-label>
                     <input matInput type="text" id="contentTitle" placeholder="Titel" name="contentTitle"
                       [(ngModel)]="pageContent.title" #contentTitleInput="ngModel" required>
@@ -66,7 +66,7 @@
                     </mat-hint>
                   </mat-form-field>
 
-                  <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+                  <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
                     <mat-label>Content subtitel</mat-label>
                     <input matInput type="text" id="contentSubTitle" placeholder="Subtitel" name="contentSubTitle"
                       [(ngModel)]="pageContent.subTitle" #contentSubTitleInput="ngModel" required>
@@ -75,7 +75,7 @@
                     </mat-hint>
                   </mat-form-field>
 
-                  <mat-form-field appearance="fill" class="form-field col-12">
+                  <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
                     <mat-label>Content text</mat-label>
                     <textarea rows="1" matInput type="text" id="contentText" placeholder="Text" name="contentText"
                       [(ngModel)]="pageContent.text" #contentTextInput="ngModel" required> </textarea>
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+                  <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
                     <mat-label>Vorige knop label</mat-label>
                     <input matInput type="text" id="backBtnLabel" placeholder="Label" name="backBtnLabel"
                       [(ngModel)]="pageContent.btnBackText" #backBtnLabelInput="ngModel" required>
@@ -93,7 +93,7 @@
                     </mat-hint>
                   </mat-form-field>
 
-                  <mat-form-field appearance="fill" class="form-field col-sm-12 col-md-6">
+                  <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
                     <mat-label>Home knop label</mat-label>
                     <input matInput type="text" id="homeBtnLabel" placeholder="Label" name="homeBtnLabel"
                       [(ngModel)]="pageContent.btnHomeText" #homeBtnLabelInput="ngModel" required>
